--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main, flow ]
+    branches: [ main, development ]
   pull_request:
     branches: [ main ]
 
