--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "fastmcp": "^1.27.3",
     "human-crypto-keys": "^0.1.4",
     "lodash": "^4.17.21",
+    "yaml": "^2.8.0",
     "zod": "^3.24.4"
   },
   "release": {
@@ -98,6 +99,7 @@
     "@tsconfig/node22": "^22.0.1",
     "@types/human-crypto-keys": "^0.1.3",
     "@types/node": "^24.0.3",
+    "@types/yaml": "^1.9.6",
     "@vitest/coverage-v8": "^3.1.3",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-perfectionist": "^4.12.3",
