--- a/.github/workflows/pr-validation-fast.yml
+++ b/.github/workflows/pr-validation-fast.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Detect file changes
         if: steps.check.outputs.skip-ci != 'true'
-        uses: dorny/paths-filter@v3
+        uses: dorny/paths-filter@v2
         id: changes
         with:
           filters: |
@@ -265,7 +265,7 @@ jobs:
   pr-status:
     name: PR Status Report
     runs-on: ubuntu-latest
-    needs: [quick-checks, unit-tests, integration-tests-critical, security-audit, platform-check]
+    needs: [detect-changes, quick-checks, unit-tests, integration-tests-critical, security-audit, platform-check]
     if: always() && needs.detect-changes.outputs.skip-ci != 'true'
     steps:
       - name: Generate status report
